examples/pos/withstatement.effekt
module examples/pos/withstatement

effect Exc[A](msg: String): A

def printer { p: Unit / Exc }: Unit / Console = try { p() } with {
    case Exc(msg) => println(msg)
}

def user(): Unit / Console = {
    with printer;
    println("hello");
    do Exc[Unit]("raised exception");
    println("world")
}

def main() = user()