examples/neg/unbound_type.effekt
module examples/pos/lexer

import text/string
import text/regex
import immutable/option


effect EOS[A](): A
effect LexerError[A](msg: String, pos: Position): A

effect Lexer {
  def peek(): Option[Token]
  def next(): Token
}

def lexer[R](in: String) { prog: R / Lexer } : R / LexerError = {
    try { prog() } with Lexer {
        def peek() = resume(None())
        def next() = 
            {
                lexeme()
            }
    }
}
